--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 			<li><a href="kontakter.asp">Kontakt</a></li>
 			<div class="discord1">
 				<a href="https://discord.com/invite/...">
-					<button onclick>DISCORD</button>
+					<button onclick></button>
 				</a>
 			</div>
 		</ul>
